# genai-langchain-analysis

./: README.md  main.py  pyproject.toml  requirements.txt
src/: agent.py  types.py  workflow.py
src/agents/: analysis.py  comparison.py  document_processor.py  factory.py  insurance_analysis.py  summary.py  vector_store.py
src/systems/: analysis_graph.py  document_processor.py  types.py  vector_store.py
src/systems/analysis/: analysis_graph.py  factory.py  multi_agent_supervisor.py
src/systems/analysis/agents/: comparison.py  summary.py  trend.py
src/systems/analysis/agents/abstract/: base.py
src/systems/analysis_agents/: base.py  trend_analysis.py
src/utils/: file_detection.py  progress.py  timing.py
